--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,9 @@ cwallet.sso.lck
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-/target
+# target class
+target/
+
+# app properties
+
+# src/main/resources/application.properties
