--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=6fcfcea1fd970f8560198c4fccdad7b4e4cfaae82107147b4ecfb
 spring.datasource.url=jdbc:postgresql://ec2-54-243-67-199.compute-1.amazonaws.com:5432/d2hofjie18cg9f
 spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/api-v2
+server.port=${PORT:5000}
