--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 spring.datasource.url=${sqlURL}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 server.servlet.context-path=/api-v2
 server.port=${PORT:5000}
