--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 spring.datasource.url=${sqlURL}
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/api-v2
 server.port=${PORT:5000}
